<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <group android:checkableBehavior="single" >
        <item
            android:id="@+id/nav_home"
            android:title="@string/home"
            android:icon="@drawable/home"/>
        <item
            android:id="@+id/nav_stay"
            android:title="@string/stay"
            android:icon="@drawable/hotel"/>
        <item
            android:id="@+id/nav_eat"
            android:title="@string/eat"
            android:icon="@drawable/restaurant"/>

        <item
            android:id="@+id/nav_business"
            android:title="@string/BusinessesHeading"
            android:icon="@drawable/work" />

        <item
            android:id="@+id/nav_Activities"
            android:title="@string/activitiesHeading"
            android:icon="@drawable/hiking" />

        <item
            android:id="@+id/nav_Events"
            android:title="@string/eventsHeading"
            android:icon="@drawable/events" />

        <item
            android:id="@+id/nav_eelFeeding"
            android:title="@string/eelFeeding"
            android:icon="@drawable/eel_icon" />

        <item
            android:id="@+id/nav_Contacts"
            android:title="@string/contactUsHeading"
            android:icon="@drawable/call" />


    </group>


</menu>