<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <androidx.drawerlayout.widget.DrawerLayout
        android:id="@+id/drawerLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

        <!--Need to alter the margin values (currently hardcoded)-->
        <com.google.android.material.navigation.NavigationView
            android:id="@+id/nav_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:fitsSystemWindows="true"
            app:headerLayout="@layout/drawer_header_layout"
            app:menu="@menu/drawer_menu" />

        <RelativeLayout
            android:id="@+id/relDrawerLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <FrameLayout
                android:id="@+id/frameParentHome"
                android:layout_width="match_parent"
                android:layout_height="125dp">

                <ImageView
                    android:id="@+id/imageView5"
                    android:layout_width="match_parent"
                    android:layout_height="125dp"
                    app:srcCompat="@drawable/homepic" />

                <ImageButton
                    android:id="@+id/btnMenu"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|start"
                    android:background="@android:color/transparent"
                    android:minWidth="40dp"
                    android:src="@drawable/baseline_menu_24"
                    tools:ignore="SpeakableTextPresentCheck" />

                <TextView
                    android:id="@+id/tvHomeHeading"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="60dp"
                    android:gravity="center|start"
                    android:shadowColor="@color/black"
                    android:shadowDx="1"
                    android:shadowDy="10"
                    android:shadowRadius="10"
                    android:text="@string/HomeHeading"
                    android:textColor="@color/white"
                    android:textSize="45sp"
                    android:textStyle="bold" />

            </FrameLayout>

            <RelativeLayout
                android:id="@+id/relBody"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/frameParentHome">


                    <TextView
                        android:id="@+id/tvAbout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center_horizontal"
                        android:text="@string/About"
                        android:textSize="24sp"
                        android:layout_marginTop="16dp"
                        android:textColor="@color/black"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:id="@+id/linButtons"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:orientation="vertical"
                        android:layout_marginStart="8dp"
                        android:layout_below="@id/tvAbout">

                        <TextView
                            android:id="@+id/btnStil"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="start"
                            android:layout_marginBottom="8dp"
                            android:backgroundTint="@color/gray_400"
                            android:gravity="start"
                            android:drawablePadding="8dp"
                            android:text="@string/Stilbaai"
                            android:textColor="@color/black"
                            android:textSize="16sp"
                            app:drawableStartCompat="@drawable/info" />

                        <TextView
                            android:id="@+id/btnJong"
                            android:layout_width="wrap_content"
                            android:layout_height="0dp"
                            android:layout_gravity="start"
                            android:layout_weight="1"
                            android:layout_marginBottom="8dp"
                            android:backgroundTint="@color/gray_400"
                            android:textColor="@color/black"
                            android:drawablePadding="8dp"
                            android:gravity="center_horizontal"
                            android:maxLines="1"
                            android:scrollHorizontally="true"
                            android:text="@string/Jongensfontein"
                            android:textSize="16sp"
                            app:drawableStartCompat="@drawable/info"/>

                        <TextView
                            android:id="@+id/btnMelk"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="start"
                            android:layout_marginBottom="16dp"
                            android:backgroundTint="@color/gray_400"
                            android:gravity="center_horizontal"
                            android:drawablePadding="8dp"
                            android:textColor="@color/black"
                            android:maxLines="1"
                            android:scrollHorizontally="true"
                            android:text="@string/Melkhoutfontein"
                            android:textSize="16sp"
                            app:drawableStartCompat="@drawable/info"/>
                    </LinearLayout>

                    <TextView
                        android:id="@+id/tvToday"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:text="@string/TodayEvents"
                        android:layout_below="@id/linButtons"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        android:textStyle="bold" />



                        <!-- Add a ViewPager to display events -->
                        <androidx.viewpager.widget.ViewPager
                            android:id="@+id/viewPager"
                            android:layout_width="match_parent"
                            android:layout_height="100dp"
                            android:layout_below="@+id/tvToday"
                            android:contentDescription="@string/About" />

                        <!-- Add a TabLayout for navigation between events -->
                <com.google.android.material.tabs.TabLayout
                    android:id="@+id/tabLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/viewPager"
                    android:layout_gravity="bottom"
                    android:contentDescription="@string/About"
                    app:tabBackground="@drawable/event_dots"
                    app:tabGravity="center"
                    app:tabIndicatorGravity="center"
                    app:tabIndicator="@null"
                    app:tabMaxWidth="12dp"
                    app:tabIndicatorHeight="0dp"
                    app:tabMode="scrollable" />

                <RelativeLayout
                    android:id="@+id/relAdverts"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tabLayout"
                    android:layout_alignParentBottom="true"
                    android:gravity="top"
                    android:layout_marginBottom="16dp"
                    >

                    <TextView
                        android:id="@+id/tvEelAdvert"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:textColor="@color/black"
                        android:text="@string/EelAdvert"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <ImageView
                        android:id="@+id/imgEelAdvert"
                        android:layout_width="wrap_content"
                        android:layout_height="130dp"
                        android:scaleType="fitXY"
                        android:layout_marginBottom="8dp"
                        android:layout_below="@+id/tvEelAdvert"
                        app:srcCompat="@drawable/home_eel" />

                    <TextView
                        android:id="@+id/tvLocalStore"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:layout_below="@+id/imgEelAdvert"
                        android:text="@string/StoreAdvert"
                        android:textColor="@color/black"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <ImageView
                        android:id="@+id/imgStoreAdvert"
                        android:layout_width="match_parent"
                        android:layout_height="130dp"
                        android:scaleType="fitXY"
                        android:layout_below="@+id/tvLocalStore"
                        app:srcCompat="@drawable/home_store" />

            </RelativeLayout>
            </RelativeLayout>
        </RelativeLayout>
    </androidx.drawerlayout.widget.DrawerLayout>
</RelativeLayout>