<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Businesses">

    <androidx.drawerlayout.widget.DrawerLayout
        android:id="@+id/drawerLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <!--Need to alter the margin values (currently hardcoded)-->
        <com.google.android.material.navigation.NavigationView
            android:id="@+id/nav_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:fitsSystemWindows="true"
            app:headerLayout="@layout/drawer_header_layout"
            app:menu="@menu/drawer_menu" />

        <RelativeLayout
            android:id="@+id/relDrawerLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <FrameLayout
                android:id="@+id/frameParentBusinesses"
                android:layout_width="match_parent"
                android:layout_height="150dp">

                <ImageView
                    android:id="@+id/imgBusinesses"
                    android:layout_width="match_parent"
                    android:layout_height="150dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/businesses_image_background" />

                <ImageButton
                    android:id="@+id/btnMenu"
                    android:layout_width="wrap_content"
                    android:layout_height="48dp"
                    android:layout_gravity="center|start"
                    android:background="@android:color/transparent"
                    android:minWidth="32dp"
                    android:src="@drawable/baseline_menu_24"
                    tools:ignore="SpeakableTextPresentCheck" />

                <TextView
                    android:id="@+id/tvBusinessesHeading"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="48dp"
                    android:gravity="center|start"
                    android:shadowColor="@color/black"
                    android:shadowDx="1"
                    android:shadowDy="10"
                    android:shadowRadius="10"
                    android:text="@string/BusinessesHeading"
                    android:textColor="@color/white"
                    android:textSize="45sp"
                    android:textStyle="bold" />
            </FrameLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/frameParentBusinesses">

                <androidx.cardview.widget.CardView
                    android:id="@+id/cardViewSearch"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginStart="25dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="25dp"
                    android:layout_marginBottom="16dp"
                    app:cardCornerRadius="8dp"
                    app:cardElevation="8dp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="8dp">

                        <EditText
                            android:id="@+id/etSearch"
                            android:layout_width="300dp"
                            android:layout_height="match_parent"
                            android:autofillHints=""
                            android:background="@android:color/transparent"
                            android:gravity="center"
                            android:hint="@string/searchBar"
                            android:inputType="text"
                            android:maxLines="1"
                            android:textAlignment="center"
                            android:textColor="@color/black"
                            android:textColorHint="@color/searchBarHint"
                            android:theme="@style/EditTextTheme"
                            tools:ignore="TouchTargetSizeCheck" />

                        <ImageButton
                            android:id="@+id/btnSearch"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_alignParentEnd="true"
                            android:layout_centerVertical="true"
                            android:layout_toEndOf="@+id/etSearch"
                            android:background="@android:color/transparent"
                            android:contentDescription="@string/About"
                            android:src="@drawable/baseline_search_24"
                            tools:ignore="TouchTargetSizeCheck" />

                    </RelativeLayout>
                </androidx.cardview.widget.CardView>

                <ListView
                    android:id="@+id/businessListView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_below="@id/cardViewSearch"
                    android:layout_centerInParent="true"
                    android:dividerHeight="1dp" />
            </RelativeLayout>
        </RelativeLayout>
    </androidx.drawerlayout.widget.DrawerLayout>
</RelativeLayout>